[tool.poetry]
name = "sekoiaio-documentation"
description = "An MkDocs server for SEKOIA.IO public Markdown documentation"
version = "1.0"
authors = []
packages = [
    { include = "plugins" }
]

[tool.poetry.plugins."mkdocs.plugins"]
redoc = "plugins.redoc:RedocPlugin"
integration_by_uuid = "plugins.integration_by_uuid:IntegrationByUUIDPlugin"
sass = "plugins.sass:CompileSCSSPlugin"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.1.21"
mkdocs-redirects = "^1.2.1"
markdown-include = "^0.8.1"
lightgallery = "^0.5"
markdown = "3.3.7" # Newer versions are not compatible with lightgallery

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
