[tool.poetry]
name = "parse_build_errors"
version = "0.0.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 119
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "FIX", # flake8-fixme
]
ignore = [
    "FIX003", # line-contains-xxx
    "FIX004", # line-contains-hack
    "C901",   # complex-structure
]
