[tool.poetry]
name = "update_mkdocs"
version = "0.1.0"
description = ""
authors = ["gbossert <georges.bossert@sekoia.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
