[project]
name = "update_mkdocs"
version = "0.1.0"
description = ""
authors = [{"name"="Georges Bossert", "email"="georges.bossert@sekoia.io"}]
requires-python = ">=3.11,<4.0.0"

dependencies = [
    "PyYAML (>=6.0.0,<7.0.0)",
    "Jinja2 (>=3.1.3,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
